// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ViewShell > snapshots > bare shell — no header 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│               🍩 ██████╗  █████╗ ██╗     ██████╗ ██╗  ██╗ ██████╗████████╗██╗     🍩             │
│                  ██╔══██╗██╔══██╗██║     ██╔══██╗██║  ██║██╔════╝╚══██╔══╝██║                    │
│                  ██████╔╝███████║██║     ██████╔╝███████║██║        ██║   ██║                    │
│                  ██╔══██╗██╔══██║██║     ██╔═══╝ ██╔══██║██║        ██║   ██║                    │
│                  ██║  ██║██║  ██║███████╗██║     ██║  ██║╚██████╗   ██║   ███████╗               │
│                  ╚═╝  ╚═╝╚═╝  ╚═╝╚══════╝╚═╝     ╚═╝  ╚═╝ ╚═════╝   ╚═╝   ╚══════╝               │
│                                                                                                  │
│                                      🍩 "stable test quote"                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯

just body"
`;

exports[`ViewShell > snapshots > titled shell with body 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│               🍩 ██████╗  █████╗ ██╗     ██████╗ ██╗  ██╗ ██████╗████████╗██╗     🍩             │
│                  ██╔══██╗██╔══██╗██║     ██╔══██╗██║  ██║██╔════╝╚══██╔══╝██║                    │
│                  ██████╔╝███████║██║     ██████╔╝███████║██║        ██║   ██║                    │
│                  ██╔══██╗██╔══██║██║     ██╔═══╝ ██╔══██║██║        ██║   ██║                    │
│                  ██║  ██║██║  ██║███████╗██║     ██║  ██║╚██████╗   ██║   ███████╗               │
│                  ╚═╝  ╚═╝╚═╝  ╚═╝╚══════╝╚═╝     ╚═╝  ╚═╝ ╚═════╝   ╚═╝   ╚══════╝               │
│                                                                                                  │
│                                      🍩 "stable test quote"                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯

▣ SETTINGS

two rows below"
`;
